--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,8 @@ dependencies:
   timeline_tile: ^2.0.0
   intl: ^0.19.0
   url_launcher: ^6.2.5
+  http: ^1.2.1
+  path_provider: ^2.0.9
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
